--- a/action.yml
+++ b/action.yml
@@ -4,24 +4,69 @@ inputs:
   config_file:
     description: 'Path to File Puller config'
     default: '.file-puller/config.json'
+  destination_root:
+    description: 'Path to local clone of destination repository'
+    default: '.'
+  github_token:
+    description: 'GITHUB_TOKEN'
+    default: '${{ github.token }}'
 outputs:
   diff:
-    description: "`git diff` output"
-    value: ${{ steps.random-number-generator.outputs.random-id }}
+    description: '`git diff` output'
+    value: '${{ steps.commit-changes.outputs.diff }}'
+
+# 1. Read items to sync, from the input `config_file`
+# 1. Clone the destination repository and check out a branch
+# 1. Clone each source repository
+# 1. Copy files from the source repositories into destination
+# 1. Push changes to the destination repository
+# 1. Create or update a pull request
+
 runs:
   using: "composite"
   steps:
-    - name: Read items to sync, from the `config-file` input
-      run: cat ${{ inputs.config-file }}
+
+    - name: 'Validate config: ${{ inputs.config_file }}'
+      env:
+        # Can these be overridden by workflow job step env?
+        FP_CONFIG: ${{ inputs.config_file }}
+        FP_DSTROOT: ${{ inputs.destination_root }}
+        FP_GITEMAIL: '41898282+github-actions[bot]@users.noreply.github.com'
+        FP_GITNAME: 'github-actions[bot]'
+        FP_PRHEAD: chore/file-puller
+        FP_SRCROOT: $GITHUB_ACTION_PATH/sources
+      run: $GITHUB_ACTION_PATH/file-puller.sh validate-config
       shell: bash
-    - name: Clone the destination repository and check out a branch
-      uses: actions/checkout@v2
-    - name: Clone each source repository and check out the specified ref
-      run: for each thing; do foo; done
+
+    - name: Clone each source repository
+      env:
+        FP_GITHUB_TOKEN: ${{ inputs.github_token }}
+      run: $GITHUB_ACTION_PATH/file-puller.sh clone-srcRepos
       shell: bash
+
     - name: Copy files from the source repositories into destination
-      run: for each thing; do foo; done
+      env:
+        FP_GITHUB_TOKEN: ${{ inputs.github_token }}
+      run: $GITHUB_ACTION_PATH/file-puller.sh copy-files
       shell: bash
-    - name: Push changes to the destination repository
-      run: git push origin main
+
+    - name: Commit changes to the destination repository
+      id: commit-changes
+      env:
+        FP_GITHUB_TOKEN: ${{ inputs.github_token }}
+      run: |
+        $GITHUB_ACTION_PATH/file-puller.sh commit-changes
+        $GITHUB_ACTION_PATH/file-puller.sh output-diff
       shell: bash
+
+    - name: Update or create pull request
+      env:
+        FP_GITHUB_TOKEN: ${{ inputs.github_token }}
+      run: |
+        $GITHUB_ACTION_PATH/file-puller.sh push-changes
+        $GITHUB_ACTION_PATH/file-puller.sh pull-request
+      shell: bash
+
+branding:
+  icon: 'git-pull-request'
+  color: 'purple'
